<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".jetpack.JetpackFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_lifecycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/life_cycle_activity"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_view_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_model_activity"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_live_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/live_data_activity"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_activity"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_datastore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datastore_fragment"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_paging"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paging_fragment"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_viewpager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewpager_fragment"
            android:textAllCaps="false" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>