<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".jetpack.viewmodel.ViewModelActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#00FF00"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        tools:text="1231" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_increment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/increment"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/tv_count" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_decrement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/decrement"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/btn_increment" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_increment_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/increment_event"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/btn_decrement" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_decrement_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/decrement_event"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/btn_increment_event" />

</androidx.constraintlayout.widget.ConstraintLayout>