<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_viewmodel_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="#800080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_viewmodel_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/viewmodel_activity_count"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_modify_view_model_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/modify_viewmodel_count"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/layout_viewmodel_count" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_livedata_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="#800080"
        app:layout_constraintTop_toBottomOf="@id/btn_modify_view_model_count">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_livedata_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/livedata_activity_count"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_modify_livedata_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/modify_livedata_count"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/layout_livedata_count" />

</androidx.constraintlayout.widget.ConstraintLayout>