<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".jetpack.room.RoomActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_user"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_room_user" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="26dp"
        android:contentDescription="@string/room_operation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_load_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_load_users"
        android:textAllCaps="false"
        android:visibility="gone"
        app:fabSize="mini"
        app:layout_constraintCircle="@id/btn_menu"
        app:layout_constraintCircleAngle="0"
        app:layout_constraintCircleRadius="0dp"
        app:srcCompat="@android:drawable/ic_dialog_info" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_get_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/room_get_user"
        android:text="@string/room_get_user"
        android:textAllCaps="false"
        android:visibility="gone"
        app:fabSize="mini"
        app:layout_constraintCircle="@id/btn_menu"
        app:layout_constraintCircleAngle="45"
        app:layout_constraintCircleRadius="0dp"
        app:srcCompat="@android:drawable/ic_input_get" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/room_add_user"
        android:text="@string/room_add_user"
        android:textAllCaps="false"
        android:visibility="gone"
        app:fabSize="mini"
        app:layout_constraintCircle="@id/btn_menu"
        app:layout_constraintCircleAngle="90"
        app:layout_constraintCircleRadius="0dp"
        app:srcCompat="@android:drawable/ic_input_add" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66666666"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/loading"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp"
        android:translationZ="2dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>